# neutralocean

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  densjmd95.py  fzero.py  load_OCCA.py  load_data.py  neutral_surfaces.py  nohup.out  ppc.py  pyproject.toml  requirements.txt  run_ns.py  setup.cfg
.github/workflows/: python-package.yml
docs/: API.rst  conf.py  examples.rst  grids.rst  index.rst  installation.rst  internals.rst  requirements.in  requirements.txt  usage.rst
examples/: DDsalt.0406annclim.nc  run_4casts.py  run_ECCOv4r4.py  run_NEMO_ORCA1.py  run_OCCA.py
neutral_surfaces/: __init__.py  _densjmd95.py  _interp.py  _neutral_surfaces.py  _omega.py  _vertsolve.py  _zero.py  _zero_freeze.py  bfs.py  data.py  fzero.py  interp_ppc.py  lib.py  load_data.py  mixed_layer.py  neutral_surfaces.py  neutral_traj.py  ntp.py  omega_surface.py
neutral_surfaces/eos/: _densjmd95.py  densjmd95.py  eostools.py  gsw.py
neutralocean/: __init__.py  _vertsolve.py  bfs.py  data.py  fzero.py  graph.py  grids.py  interp.py  interp_ppc.py  label.py  lib.py  mixed_layer.py  ntp.py  stability.py  surface.py  synthocean.py  traj.py
neutralocean/eos/: __init__.py  densjmd95.py  gsw.py  gswc.py  jmd06.py  jmd95.py  jmdfwg06.py  polyTEOS10bsq.py  tools.py
neutralocean/examples/: DDtheta.0406annclim.nc  load_OCCA.py  run_4casts.py  run_ECCOv4r4.py  run_NEMO_ORCA1.py  run_OCCA.py  run_example_4casts.py
neutralocean/grid/: __init__.py  graph.py  rectilinear.py  tools.py  tripolar.py  xgcm.py
neutralocean/interp1d/: __init__.py  interp1d.py  linear.py  pchip.py  tools.py
neutralocean/ppinterp/: __init__.py  lib.py  linear.py  pchip.py  ppinterp.py  ppval.py  tools.py
neutralocean/surface/: __init__.py  _vertsolve.py  isopycnal.py  neutral_surfaces.py  omega.py  trad.py
neutralocean/tests/: test_eos.py  test_fzero.py  test_interp.py  test_jmd95.py  test_neutral_surfaces.py
sandbox/EF/: OCCA_pot_dens_surf.ipynb  densjmd95jit.py  download_OCCA.py  fzero_testjit.py  linterpjit.py  numba_function_wrap.ipynb
sandbox/GS/: OCCA_pot_dens_surf.ipy  OCCA_pot_dens_surf.ipynb  OCCA_test.ipy  OCCA_test.py  _gsw.py  neutral_surfaces_GS.py
sandbox/GS/notebooks/: OCCA_pot_dens_surf.ipynb
tests/: test_eos.py  test_fzero.py  test_interp.py  test_jmd95.py  test_neutral_surfaces.py  test_vertsolve.py  test_zero.py
