# Modified from the UTide file written by Filipe Fernandes
[metadata]
name = neutralocean
version = 0.0.10
description = Python implementation of the Neutral Surfaces Toolbox
author = Geoff Stanley
author_email = g.stanley@unsw.edu.au
url = https://github.com/geoffstanley/neutralocean
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
license_file = LICENSE.txt
keywords = oceanography
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Education

[options]
install_requires =
    numba
    numpy<=1.21 # 1.22 is bugged: https://github.com/numpy/numpy/issues/20735
    scipy
    scikit-sparse
    xarray
    gsw
python_requires = >=3.7
packages = find:
zip_safe = False
# include_package_data = True

# [options.package_data]
# * =
#     neutralocean/examples/*.nc

# [sdist]
# formats = gztar

# [check-manifest]
# ignore =
#     *.yml
#     utide/data/*.mat
#     docs
#     docs/*
#     *.enc
#     notebooks
#     notebooks/*
#     tests
#     tests/*

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503
