# Modified from the UTide file written by Filipe Fernandes
[metadata]
name = neutralocean
version = attr: neutralocean.__version__
description = Neutral Surfaces in the Ocean
author = Geoff Stanley
author_email = gstanley@uvic.ca
url = https://github.com/geoffstanley/neutralocean
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
license_file = LICENSE.txt
keywords = oceanography
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Education

[options]
install_requires =
    numba
    numpy
    xarray
    scipy
    gsw
    pooch
    xgcm
    netcdf4
python_requires = >=3.8
packages = find:
zip_safe = False

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503
